test/conformance/chainsaw/validating-admission-policy-reports/background/validating-admission-policy-fail/report-assert.yaml
apiVersion: wgpolicyk8s.io/v1beta1
kind: PolicyReport
metadata:
  ownerReferences:
  - apiVersion: apps/v1
    kind: Deployment
    name: deployment-fail
summary:
  error: 0
  fail: 1
  pass: 0
  skip: 0
  warn: 0
