test/conformance/chainsaw/validating-admission-policy-reports/background/validating-admission-policy-fail/02-policy.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: policy
spec:
  timeouts: {}
  try:
  - apply:
      file: policy.yaml
  - assert:
      file: policy.yaml
