test/conformance/chainsaw/validating-admission-policy-reports/background/validating-admission-policy-fail/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: validating-admission-policy-fail
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: deployment.yaml
    - assert:
        file: deployment-assert.yaml
  - name: step-02
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy.yaml
  - name: step-03
    try:
    - assert:
        file: report-assert.yaml
